package chanyu;

option java_package = "com.chanyu.core.protobuf";

option optimize_for = SPEED;

message LoginProto {
    required int32 thirdpartyid = 1;
    required string userid = 2;
    required string loginsession = 3;
    optional int32 serverid = 4;
    optional string usertype = 5;    //同一渠道的SDK整合多个渠道
    optional string stringValue1 = 6;
    optional string systemInfo = 7; //玩家手机系统信息
    optional string clientVersion = 8;      //客户端版本
}


message EnterGameProto {
    required int32 cid = 1;         //Id
    required string name = 2;       //昵称
    required bool isMale = 3;       //性别
    required double gold = 4;       //金币
    required int32 crystal = 5;     //水晶
    required int32 diamond = 6;     //龙晶(rmb购买)
    required int32 stamina = 7;     //体力
    required int32 lv = 10;         //等级
    required double exp = 11;       //经验值
    required int32 icon = 12;       //头像Id
	optional int32 viplevel = 15;	//VIP等级
}


//玩家发送邮件
message MailSendProto {
    required int32 targetId = 1;        //目标玩家Id
    required string title = 2;          //邮件标题
    required string content = 3;        //邮件内容
}